# neurofeedback-engagement-decoding

./: README.md  pyproject.toml
neuron_analysis/: __init__.py  data_loading.py  decoding.py  main.py  stability.py
