[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuron_analysis"
version = "0.1.0"
description = "Spike data decoding and analysis pipeline"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "h5py",
    "matplotlib",
    "scikit-learn"
]